# LossBench

./: .gitignore  README.md
examples/: Benchmarking zlib with LossBench.ipynb  benchmark_sz3.sh  benchmark_zlib.sh
src/: CMakeLists.txt  benchmark.cpp  lossbench.cpp
src/benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.hpp
src/compressors/: CMakeLists.txt  Compressor.hpp  SZ3Compressor.cpp  SZ3Compressor.hpp  ZlibCompressor.cpp  ZlibCompressor.hpp  factory.cpp  factory.hpp
src/interface/: CMakeLists.txt  interface.cpp  interface.hpp
src/root-utils/: CMakeLists.txt
src/tests/: CMakeLists.txt  CreateTestTree.cpp  tree-readwrite.cpp  zlib-test.cpp
src/utils/: CMakeLists.txt  interface.cpp  interface.hpp  root.cpp  root.hpp
